--- a/ui/dashboard.html
+++ b/ui/dashboard.html
@@ -11,49 +11,76 @@
 	$('#a-name').html(AccountName)
 </script>
 <div id="dashboard-wrapper">
-	<div class="container-fluid">
+	
+	<div class="container">
 		<div class="row">
 			<div class="col">
-				<h6 class="block-head">Список ссылок</h6>
-				<textarea class="block" id="mail-links"></textarea>
+				<ul class="nav nav-tabs" id="accountsTablist">
+					<li class="nav-item add">
+						<button class="nav-link btn btn-success" id="newAccountItem" type="button">+</button>
+					</li>
+				</ul>
 			</div>
-			<div class="col-3" style="padding-left:0;padding-right:0">
-				<h6 class="block-head">Профиль на сайте</h6>
-				<div class="profile block">
-					<div class="userpic">
+		</div>
+		<div class="tab-content" id="tabContent"></div>
+	</div>
+
+	<template id="navItemTemplate">
+		<li class="nav-item" id="${id}">
+			<button class="nav-link block-head" data-bs-toggle="tab" data-bs-target="${target}" type="button">${label}</button>
+			<button class="btn btn-danger close" data-target="${target}" type="button">X</button>
+		</li>
+	</template>
+
+	<template id="navContentTemplate">
+		<div class="tab-pane fade" id="${id}">
+				<div class="row align-items-center">
+					<div class="col-2">
 						<img id="profile-pic" src="img/userpic.jpg">
 					</div>
-					<form>
-						<div class="form-group">
-							<input type="text" class="custom-input form-control form-control-sm" id="profile-username" placeholder="Логин">
-						</div>
-						<div class="form-group">
-							<input type="password" class="custom-input form-control form-control-sm" id="profile-password" placeholder="Пароль">
-						</div>
-						<button id="profile-login-btn" type="button" class="btn btn-dark btn-sm btn-block service-btn" onclick="loginOnSite()">Вход</button>
-					</form>
-				</div>
-			</div>
-			<div class="col">
-				<h6 class="block-head">Текст рассылки</h6>
-				<textarea class="block" id="mail-text"></textarea>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col">
-				<div class="input-group input-group-sm" id="ua-block">
-					<input type="text" class="custom-input form-control" placeholder="User-Agent" id="ua" aria-describedby="basic-addon1">
-					<div class="input-group-append">
-						<button class="btn btn-dark" type="button" onclick="setUserAgent()">Сохранить</button>
+					<div class="col-4">
+						<input type="text" class="custom-input form-control form-control-sm" id="profile-username" placeholder="Логин">
 					</div>
-					<script>
-						getUserAgent()
-					</script>
+					<div class="col-4">
+						<input type="password" class="custom-input form-control form-control-sm" id="profile-password" placeholder="Пароль">
+					</div>
+					<div class="col-2">
+						<button id="profile-login-btn" type="button" class="btn btn-dark float-right" onclick="loginOnSite()">Вход</button>
+					</div>
 				</div>
-				<button id="start-btn" type="button" class="btn btn-block btn-dark start-btn" onclick="start()">Начать работу</button>
-			</div>
+				<div class="row">
+					<div class="col-10">
+						<div class="input-group input-group-sm" id="ua-block">
+							<input type="text" class="custom-input form-control" placeholder="User-Agent" id="ua" aria-describedby="basic-addon1">
+						</div>
+					</div>
+					<div class="col-2">
+						<button class="btn btn-dark float-right" type="button" onclick="setUserAgent()">Сохранить</button>
+						<script>
+							getUserAgent()
+						</script>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col">
+						<h6 class="block-head">Список ссылок</h6>
+						<textarea class="block" id="mail-links"></textarea>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col">
+						<h6 class="block-head">Текст рассылки</h6>
+						<textarea class="block" id="mail-text"></textarea>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col">
+						<button id="start-btn" type="button" class="btn btn-block btn-dark start-btn" onclick="start()">Начать работу</button>
+					</div>
+				</div>
 		</div>
-	</div>
+	</template>
+
 </div>
 
 <!-- Modal -->
