--- a/ui/dashboard.html
+++ b/ui/dashboard.html
@@ -68,8 +68,16 @@
 					</div>
 				</div>
 				<div class="row">
+					<div class="col-2">
+						<span class="block-head">Список ссылок</h6>
+					</div>
+					<div class="col-10">
+						<button class="btn btn-dark float-right" type="button" onclick="saveLinks('${id}')">Сохранить ссылки</button>
+						<button class="btn btn-dark float-right" type="button" onclick="loadLinks('${id}')" style="margin-right:5px;">Загрузить ссылки</button>
+					</div>
+				</div>
+				<div class="row">
 					<div class="col">
-						<h6 class="block-head">Список ссылок</h6>
 						<textarea class="block" id="mail-links"></textarea>
 					</div>
 				</div>
