--- a/ui/dashboard.html
+++ b/ui/dashboard.html
@@ -24,46 +24,47 @@
 		</div>
 		<div class="tab-content" id="tabContent"></div>
 		<script>
-			 $('#newAccountItem').trigger('click');//TODO rework auto create form for new account.
+			initAccounts();
+			 
 		</script>
 	</div>
 
 	<template id="navItemTemplate">
-		<li class="nav-item" id="${id}">
+		<li class="nav-item" id="${id}" data-username="${username}">
 			<button class="nav-link block-head" data-bs-toggle="tab" data-bs-target="${target}" type="button">
 				<img class="profile-pic-small" data-target="${target}" src="${img}">
-				<span>${label}</snap>
+				<span>${usernameData}</snap>
 			</button>
-			<button class="btn btn-danger close" data-target="${target}" type="button">X</button>
+			<button class="btn btn-danger close" data-target="${target}" type="button" onclick="closeTab('${id}', '${childId}')">X</button>
 		</li>
 	</template>
 
 	<template id="navContentTemplate">
-		<div class="tab-pane fade" id="${id}">
+		<div class="tab-pane fade" id="${id}" data-username="${username}">
 				<div class="row align-items-center">
 					<div class="col-2">
-						<img id="profile-pic" src="img/userpic.jpg">
+						<img data-role="profile-pic" src="${img}">
 					</div>
 					<div class="col-4">
-						<input type="text" class="custom-input form-control form-control-sm" id="profile-username" placeholder="Логин">
+						<input type="text" class="custom-input form-control form-control-sm" data-role="profile-username" placeholder="Логин" value="${username}">
 					</div>
 					<div class="col-4">
-						<input type="password" class="custom-input form-control form-control-sm" id="profile-password" placeholder="Пароль">
+						<input type="password" class="custom-input form-control form-control-sm" data-role="profile-password" placeholder="Пароль" value="${password}">
 					</div>
 					<div class="col-2">
-						<button id="profile-login-btn" type="button" class="btn btn-dark float-right" onclick="loginOnSite('${id}')">Вход</button>
+						<button data-role="profile-login-btn" type="button" class="btn btn-dark float-right" onclick="loginOnSite('${id}', '${parentId}')">Вход</button>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-10">
 						<div class="input-group input-group-sm" id="ua-block">
-							<input type="text" class="custom-input form-control" placeholder="User-Agent" id="ua" aria-describedby="basic-addon1">
+							<input type="text" class="custom-input form-control" placeholder="User-Agent" data-role="ua" aria-describedby="basic-addon1" value="${ua}">
 						</div>
 					</div>
 					<div class="col-2">
-						<button class="btn btn-dark float-right" type="button" onclick="setUserAgent()">Сохранить</button>
+						<button class="btn btn-dark float-right" type="button" onclick="setUserAgent('${id}')">Сохранить</button>
 						<script>
-							getUserAgent()
+							getUserAgent('${id}')
 						</script>
 					</div>
 				</div>
@@ -78,7 +79,7 @@
 				</div>
 				<div class="row">
 					<div class="col">
-						<textarea class="block" id="mail-links"></textarea>
+						<textarea class="block" data-role="mail-links"></textarea>
 					</div>
 				</div>
 				<div class="row">
@@ -89,7 +90,7 @@
 				</div>
 				<div class="row">
 					<div class="col">
-						<button id="start-btn" type="button" class="btn btn-block btn-dark start-btn" onclick="start()">Начать работу</button>
+						<button id="start-btn" type="button" class="btn btn-block btn-dark start-btn" onclick="start('${id}')">Начать работу</button>
 					</div>
 				</div>
 		</div>
