--- a/ui/index.html
+++ b/ui/index.html
@@ -16,6 +16,7 @@
 	<script src="eel.js"></script>
 	<script src="js/jquery-3.6.0.min.js"></script>
 	<script src="js/functions.js"></script>
+	<script src="js/gallery.js"></script>
 
 	<!-- BOOTSTRAP -->
 	<script src="js/bootstrap/bootstrap.bundle.min.js"></script>
