--- a/ui/dashboard.html
+++ b/ui/dashboard.html
@@ -132,9 +132,6 @@
 	<img class="modal-loader" src="img/loader.gif" width="30" height="30"/>
 </div>
 
-<!-- Gallery trigger modal -->
-
-  
 <!-- Gallery Modal -->
 <div class="modal fade" id="galleryModal" tabindex="-1" role="dialog"  aria-hidden="true">
 	<div class="modal-dialog" role="document">
@@ -159,4 +156,24 @@
 			<img src="${src}" data-id="${dataId}" width="160" height="200"/>
 		</div>
 	</template>
+</div>
+
+<!-- Errors Modal -->
+<div class="modal fade" id="errorsModal" tabindex="-1" role="dialog"  aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">Не обработанные ссылки!</h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="closeErrorsModal();">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				<textarea id="errorLinks"></textarea>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="closeErrorsModal();">Закрыть</button>
+			</div>
+		</div>
+	</div>
 </div>
