start rework to vue. developing first login.

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,14 +9,12 @@
 	<link rel="icon" type="image/png" href="img/favicon.png" sizes="1024x1024">
 
 	<!-- TOASTIFY -->
-	<link rel="stylesheet" type="text/css" href="css/toastify.min.css">
-	<script type="text/javascript" src="js/toastify.min.js"></script>
+	<!-- <link rel="stylesheet" type="text/css" href="css/toastify.min.css"> -->
+	<!-- <script type="text/javascript" src="js/toastify.min.js"></script> -->
 
-	<!-- JS -->
-	<script src="eel.js"></script>
-	<script src="js/jquery-3.6.0.min.js"></script>
-	<script src="js/functions.js"></script>
-	<script src="js/gallery.js"></script>
+	<!-- <script src="js/jquery-3.6.0.min.js"></script> -->
+	<!-- <script src="js/functions.js"></script> -->
+	<!-- <script src="js/gallery.js"></script> -->
 
 	<!-- BOOTSTRAP -->
 	<script src="js/bootstrap/bootstrap.bundle.min.js"></script>
@@ -28,16 +26,11 @@
 
 </head>
 <body>
-	<div id="body">
-		<script>
-			checkAuth()
-		</script>
-	</div>
+	<div id="vue-app"></div>
 
-	<script type="text/javascript" src="js/script.js"></script>
+	<script src="eel.js"></script>
+	<script src="http://localhost:8080/js/chunk-vendors.js"></script>
+	<script src="http://localhost:8080/js/app.js"></script>
 
-	<div id="author">
-		<!-- <a href="https://t.me/R053X" target="_blank"> designed & developed by @R053X</a> -->
-	</div>
 </body>
 </html>
