--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
 	<!-- <link rel="stylesheet" type="text/css" href="css/toastify.min.css"> -->
 	<!-- <script type="text/javascript" src="js/toastify.min.js"></script> -->
 
-	<!-- <script src="js/jquery-3.6.0.min.js"></script> -->
+	<script src="js/jquery-3.6.0.min.js"></script>
 	<!-- <script src="js/functions.js"></script> -->
 	<!-- <script src="js/gallery.js"></script> -->
 
