--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,7 @@
 	<!-- <script type="text/javascript" src="js/toastify.min.js"></script> -->
 
 	<script src="js/jquery-3.6.0.min.js"></script>
+	<script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
 	<!-- <script src="js/functions.js"></script> -->
 	<!-- <script src="js/gallery.js"></script> -->
 
