prepare to prod

--- a/ui/index.html
+++ b/ui/index.html
@@ -31,14 +31,14 @@
 
 	<script src="eel.js"></script>
 
-	<!-- <script src="dist/js/app.7083d510.js"></script>
-	<script src="dist/js/app.7083d510.js.map"></script>
-	<script src="dist/js/chunk-vendors.d7bedd2d.js"></script>
-	<script src="dist/js/chunk-vendors.d7bedd2d.js.map"></script>
-	<link rel="stylesheet" href="dist/css/app.2e4c87eb.css"> -->
+	<script src="dist/js/app.b1a79375.js"></script>
+	<script src="dist/js/app.b1a79375.js.map"></script>
+	<script src="dist/js/chunk-vendors.d0f847fa.js"></script>
+	<script src="dist/js/chunk-vendors.d0f847fa.js.map"></script>
+	<link rel="stylesheet" href="dist/css/app.2e4c87eb.css">
 
-	<script src="http://localhost:8080/js/chunk-vendors.js"></script>
-	<script src="http://localhost:8080/js/app.js"></script>
+	<!-- <script src="http://localhost:8080/js/chunk-vendors.js"></script>
+	<script src="http://localhost:8080/js/app.js"></script> -->
 
 </body>
 </html>
